<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggalSekarang"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:letterSpacing="0.1"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toTopOf="@+id/til_berat_badan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_berat_badan"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_berat_badan"
        android:layout_marginTop="5dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_now">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_berat_badan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_catatan"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_catatan"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/til_berat_badan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLength="50"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/simpan"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til_catatan"
        app:layout_constraintTop_toBottomOf="@+id/til_catatan" />


</androidx.constraintlayout.widget.ConstraintLayout>